# o3skim

./: .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  MANIFEST.in  README.md  cf_attributes.csv  codemeta.json  example.yaml  main  o3data.nc  requirements.txt  sandbox.py  setup.cfg  setup.py  sources_example.yaml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: github-to-gitlab.yml
.sqa/: config.yml  docker-compose.yml
cicd/: module_template.py
docs/: .gitignore  conf.py  index.rst
docs/dev_guide/: commands.rst  extend_models.rst  local-install.rst  o3skim.rst  testing.rst  tests.rst
docs/getting_started/: build.rst  cli.rst  deployment.rst  first_steps.rst  load_tco3.ipynb  load_zmo3.ipynb  lon_mean.ipynb  o3norm.rst  o3skim.rst  overview.rst  prerequisites.rst  source-file.rst
docs/usage/: installation.rst  quickstart.rst
docs/user_guide/: API-reference.rst  o3skim.rst  reduce-data.rst  source-file.rst
examples/: multisource_tco3skim.ipynb  skim_ccmi-1.ipynb  tco3skim_ccmi-1.ipynb  zmo3load_ccmi-1.ipynb
o3skim/: __init__.py  __main__.py  attributes.py  config.py  extended_xarray.py  load_tco3.py  loads.py  measures_sbuv.py  normalization.py  operations.py  settings.py  source.py  sources.py  standardization.py  standardizations.py  utils.py
o3skim/load_tco3/: __init__.py
o3skim/loadfunctions_tco3/: CCMI-1_ACCESS.py  CCMI-1_CCCma.py  CCMI-1_CESM1.py  CCMI-1_CHASER.py  CCMI-1_CNRM.py  CCMI-1_ETH-PMOD.py  CCMI-1_GSFC.py  CCMI-1_IPSL.py  CCMI-1_MESSy.py  CCMI-1_MOHC.py  CCMI-1_MRI.py  CCMI-1_NIES.py  CCMI-1_NIWA.py  CCMI-1_U-CAMBRIDGE.py  CCMI-1_U-LAQUILA.py  CCMI-1_U-LEEDS.py  ECMWF_C3S.py  ECMWF_ECMWF.py  ESACCI_C3S.py  ESACCI_DLR.py  SBUV_GSFC.py  __init__.py
o3skim/loadfunctions_zmo3/: CCMI-1_ACCESS.py  CCMI-1_CCCma.py  CCMI-1_CHASER.py  CCMI-1_GSFC.py  CCMI-1_IPSL.py  CCMI-1_NIES.py  CCMI-1_U-LAQUILA.py
o3skim/scripts/: __init__.py  norm.py  o3measure.py  o3norm  o3norm.py  o3skim.py  skim.py  skim_tco3.py
o3skim/test/: test_extended_xarray.py  test_model.py  test_operations.py  test_source.py  test_standardization.py  (+1 more)
requirements/: documentation.txt  testing.txt
tests/: __init__.py  conftest.py  mockup_data.py  mockup_noise.py  noise_files.yaml  sources_base.yaml  sources_err.yaml  sources_example.yaml  test_errors.py  test_grouping.py  test_loading.py  test_o3norm.py  test_o3skim.py  test_processing.py  test_requirements.py  test_saving.py  test_sources.py  test_sources.yaml  test_tco3.py  test_template.py  test_utils.py  test_vmro3.py  utils.py
(+132 files in other folders)
