[metadata]
name = o3skim
version = 0.5.0
description = Data pre-processing for ozone models
description-file = README.md
authors = 
  Valentin Kozlov
  Tobias Kerzenmacher
  Borja Esteban
authors_email = 
  V.Kozlov <valentin.kozlov@kit.edu>
  T.Kerzenmacher <tobias.kerzenmacher@kit.edu>
  B.Esteban Sanchis <borja.sanchis@kit.edu>
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires = 
  numpy~=1.20.1
  pandas~=1.3.5
  xarray~=0.20.1
  cf-xarray~=0.7.0

[options.entry_points]
console_scripts =
  o3measure = o3skim.scripts.o3measure:main
  skim_tco3 = o3skim.scripts.skim_tco3:main

[build_sphinx]
project = o3skim
version = 0.1
release = 0.1.0
source-dir = docs

