[metadata]
name = o3skim
version = 0.7.3
description = Data pre-processing for ozone models
description_file = README.md
authors = 
  Valentin Kozlov
  Tobias Kerzenmacher
  Borja Esteban
authors_email = 
  V.Kozlov <valentin.kozlov@kit.edu>
  T.Kerzenmacher <tobias.kerzenmacher@kit.edu>
  B.Esteban Sanchis <borja.sanchis@kit.edu>
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
install_requires = 
  numpy~=1.20.1
  pandas~=1.3.5
  xarray~=2022.3.0 
  cf-xarray~=0.7.2
  netCDF4~=1.5.8
  scipy~=1.5.3
  dask~=2022.4.1

[build_sphinx]
project = o3skim
version = 0.1
release = 0.1.0
source-dir = docs

