[metadata]
name = o3skim
version = 0.10.0
description = Data pre-processing for ozone models
description_file = README.md
authors = 
  Valentin Kozlov
  Tobias Kerzenmacher
  Borja Esteban
authors_email = 
  V.Kozlov <valentin.kozlov@kit.edu>
  T.Kerzenmacher <tobias.kerzenmacher@kit.edu>
  B.Esteban Sanchis <borja.sanchis@kit.edu>
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires = 
  cf-xarray~=0.7.4
  dask~=2022.6.1
  distributed~=2022.6.1
  netCDF4~=1.5.8
  numpy~=1.23.1
  pandas~=1.3.5
  scipy~=1.9.0
  xarray~=2022.6.0
  dask[diagnostics]~=2022.6.1
  dask[distributed]~=2022.6.1

[build_sphinx]
project = o3skim
version = 0.1
release = 0.1.0
source-dir = docs

